# ctf-agent

./: .env.example  .gitignore  LICENSE  README.md  pull_challenges.py  pyproject.toml
.config/: dreamhack.cookie
.omx/: ruff-report.txt  ty-report.txt
.omx/state/: codex-coordinator-thread.json  notify-hook-state.json  skill-active-state.json  tmux-hook-state.json
.omx/state/operator-ui/: ralph-progress.json
2026_GMDSOFT/aeBPF/: metadata.yml
2026_GMDSOFT/aeBPF/.shared-artifacts/: aeBPF_preview.txt  current_tree.txt  distfiles_filelist.txt  find-files-1776529529412-9a5164ff.txt  find-files-1776532650424-d2bb99a6.txt  find-files-1776532663973-93ac8aa8.txt  find-files-1776535697070-2b8c1ae5.txt  find-files-1776536753406-bb49e268.txt  find-files-1776536776703-4b6e4fca.txt  find-files-1776571950507-ef05c14d.txt  find-files-1776572031619-0977b2d0.txt  find-files-1776572516938-7a8cbe97.txt  find-files-1776574557321-28e5eab1.txt  find-files-1776574961846-2204d1a9.txt  find-files-1776575080692-12e4bfc8.txt  find-files-1776575142912-b9eb4187.txt  find-files-1776575276276-929040c8.txt  find-files-1776575337825-2aa3e838.txt  find-files-1776575565463-0a8da52f.txt  find-files-1776576423119-2c0a68fd.txt  find-files-1776576563851-ec6ff870.txt  find-files-1776576963875-9fcd2e86.txt  find-files-1776576965175-ad6d9f44.txt  find-files-1776577036804-8f811880.txt  find-files-1776577319840-eeda7076.txt  find-files-1776577590910-38ce548d.txt  find-files-1776578024147-cd205176.txt  find-files-1776578534547-8e211961.txt  find-files-1776578614449-eb4a1153.txt  find-files-1776578804145-9f221d43.txt  find-files-1776579217131-46764b77.txt  find-files-1776579220111-c93b55b8.txt  find-files-1776579306135-27b7287d.txt  find-files-1776579439933-b60a7e8b.txt  find-files-1776579506776-54e6e0dd.txt  find-files-1776579778097-48dc0346.txt  find-files-1776579854116-225e0a64.txt  find-files-1776580145732-0b31737c.txt  find-files-1776592384522-8c6bbd0b.txt  find-files-1776592442200-972ee77b.txt  (+127 more)
2026_GMDSOFT/aeBPF/.shared-artifacts/tmp/: rootfs_listing.err  (+1 more)
backend/: auth.py  automation_profile.py  browser_sessions.py  challenge_config.py  cli.py  config.py  cookie_file.py  cost_tracker.py  ctfd.py  deps.py  import_cli.py  instance_probe.py  local_sandbox.py  message_bus.py  models.py  operator_ui.py  output_types.py  poller.py  prompts.py  runtime_control.py  sandbox.py  solver_base.py  tracing.py
backend/agents/: advisor_base.py  claude_advisor.py  claude_code_solver.py  claude_coordinator.py  codex_advisor.py  codex_coordinator.py  codex_rpc_io.py  codex_solver.py  coordinator_core.py  coordinator_loop.py  gemini_hook.py  gemini_solver.py  human_coordinator.py  lane_runtime.py  runtime_solver.py  solver.py  swarm.py  url_parser_agent.py
backend/importers/: __init__.py  auto.py  base.py  dreamhack.py  registry.py  spec.py
backend/static/: human-ui.css  human-ui.js  human_ui.html  operator_ui.css  operator_ui.html  operator_ui.js
backend/tools/: core.py  flag.py  sandbox.py
sandbox/: Dockerfile.sandbox  refresh-provider-tooling.sh  smoke-check.sh
tests/: operator_ui_pending_selection.test.mjs  test_artifacts.py  test_auth.py  test_browser_sessions.py  test_challenge_config.py  test_claude_advisor.py  test_cli.py  test_codex_solver.py  test_coordinator_fallback.py  test_coordinator_queue.py  test_coordinator_status.py  test_ctfd.py  test_gemini_hook.py  test_gemini_solver.py  test_importers.py  test_instance_probe.py  test_lane_runtime.py  test_local_sandbox.py  test_message_bus.py  test_models.py  test_operator_endpoints.py  test_operator_ui.py  test_platforms.py  test_poller.py  test_prompts.py  test_runtime_solver.py  test_sandbox.py  test_sandbox_manifest.py  test_solve_artifacts.py  test_solver.py  test_swarm_quota.py  test_swarm_restart.py
(+121 files in other folders)
